feat: 조직 선택시 페이징 처리 및 프로메테우스 모니터링 추가